# med-lm-envs

./: .gitignore  README.md  pyproject.toml
REDACTED_verifiers/: __init__.py
REDACTED_verifiers/cli/: __init__.py  _config_loader.py  _eval_builder.py  _job_builder.py  _job_executor.py  _manifest.py  _single_run.py
REDACTED_verifiers/cli/process/: __init__.py  env_index.py  metadata.py  pipeline.py  rollout.py  workspace.py
REDACTED_verifiers/orchestrate/: bench.py  config.py  dashboard.py  docker_vllm.py  resources.py  run.py
REDACTED_verifiers/parsers/: __init__.py  json_parser.py  parser_helpers.py  xml_parser.py
REDACTED_verifiers/rewards/: multiple_choice_accuracy.py
REDACTED_verifiers/utils/: cli_env_args.py  pathing.py  prime_inference.py  randomize_multiple_choice.py
configs/envs/: careqa_en.yaml  head_qa_v2.yaml  longhealth.yaml  m_arc.yaml  med_halt.yaml  med_mcqa.yaml  medagentbench.yaml  medbullets.yaml  medcalc_bench.yaml  medconceptsqa_sample.yaml  medqa.yaml  medxpertqa.yaml  meqsum.yaml  metamedqa.yaml  mmlu_pro_health.yaml  pubhealthbench_mcq.yaml  pubmedqa.yaml  sctpublic.yaml
docs/: REDACTED-eval-bench.md  REDACTED-eval-single-run.md  REDACTED-eval-winrate.md  REDACTED-eval.md  medarc-eval-bench.md  medarc-eval-process.md  medarc-eval-single-run.md  medarc-eval-winrate.md  medarc-eval.md  vllm-orchestrator.md
environments/aci_bench/: README.md  pyproject.toml
environments/aci_bench/aci_bench/: aci_bench.py
environments/agentclinic/: README.md  pyproject.toml
environments/careqa/: README.md  careqa.py  pyproject.toml
environments/head_qa/: README.md  head_qa.py  pyproject.toml
environments/head_qa_v2/: README.md  head_qa_v2.py  pyproject.toml
environments/healthbench/: healthbench.py
environments/longhealth/: README.md  longhealth.py  pyproject.toml
environments/m_arc/: README.md  m_arc.py  pyproject.toml
environments/med_dialog/: pyproject.toml
environments/med_dialog/med_dialog/: __init__.py  judge_prompts.py  med_dialog.py
environments/med_halt/: README.md  med_halt.py  med_halt_prompts.py  pyproject.toml
environments/med_mcqa/: README.md  med_mcqa.py  pyproject.toml
environments/medagentbench/: medagentbench.py
environments/medbullets/: README.md  medbullets.py  pyproject.toml
environments/medcalc_bench/: README.md  medcalc_bench.py  pyproject.toml
environments/medcalc_bench/medcalc_bench/: __init__.py  medcalc_bench.py  prompts.py  tools.py
environments/medcasereasoning/: medcasereasoning.py
environments/medconceptsqa/: README.md  medconceptsqa.py  pyproject.toml
environments/medec/: README.md  medec.py  pyproject.toml
environments/medexqa/: README.md  medexqa.py  pyproject.toml
environments/medhallu/: README.md  postprocess.py  pyproject.toml
environments/medhallu/medhallu/: __init__.py  medhallu.py  prompts.py
environments/medicationqa/: README.md  medicationqa.py  pyproject.toml
environments/medicationqa/medicationqa/: __init__.py  judge_prompts.py  medicationqa.py
environments/medqa/: README.md  medqa.py  pyproject.toml
environments/medrbench/: README.md  pyproject.toml
environments/medrbench/medrbench/: __init__.py  medrbench.py  prompts.py
environments/medredqa/: README.md  pyproject.toml
environments/medxpertqa/: medxpertqa.py  pyproject.toml
environments/meqsum/: README.md  meqsum.py  pyproject.toml
environments/metamedqa/: README.md  metamedqa.py  pyproject.toml
environments/mmlu_pro_health/: mmlu_pro_health.py  pyproject.toml
environments/mtsamples_procedures/: README.md  pyproject.toml
environments/mtsamples_procedures/mtsamples_procedures/: __init__.py  judge_prompts.py  mtsamples_procedures.py
environments/mtsamples_replicate/: README.md  pyproject.toml
environments/mtsamples_replicate/mtsamples_replicate/: __init__.py  judge_prompts.py  mtsamples_replicate.py
environments/pubhealthbench/: README.md  pyproject.toml
environments/pubhealthbench/pubhealthbench/: __init__.py  prompts.py  pubhealthbench.py
environments/pubmedqa/: pubmedqa.py  pyproject.toml  readme.md
environments/sctpublic/: README.md  pyproject.toml
environments/sctpublic/sctpublic/: __init__.py  sctpublic.py
environments/sctpublic/sctpublic/data/: example_+1.md  example_+2.md  example_-1.md  example_-2.md  example_0.md  guideline.md  sct_cleaned_full.csv  testcase.md
environments/supergpqa_medicine/: README.md  pyproject.toml  supergpqa_medicine.py
medarc_verifiers/: prompts.py
medarc_verifiers/cli/: _constants.py  _eval_builder.py  _job_executor.py  _manifest.py  _manifest_planner.py  _schemas.py  _single_run.py  main.py
medarc_verifiers/cli/hf/: sync.py  (+1 more)
medarc_verifiers/orchestrate/: __init__.py  cli.py  dashboard.py  docker_vllm.py  run.py  scheduler.py  state.py
medarc_verifiers/parsers/: __init__.py
medarc_verifiers/rewards/: multiple_choice_accuracy.py
medarc_verifiers/utils/: __init__.py  download.py  judge_helpers.py  prime_inference.py  retry.py  sampling_args.py  token_tracker.py
scripts/: mmlu_pro_health_transform.py
tests/: test_json_parser.py  test_judge_helpers.py  test_mcq_accuracy.py  test_meqsum.py  test_orchestrate_cli_validation.py  test_orchestrate_config.py  test_orchestrate_dashboard.py  test_orchestrate_docker_vllm.py  test_orchestrate_parallel_launch.py  test_orchestrate_scheduler_backfill.py  test_orchestrate_scheduler_cancellation.py  test_orchestrate_scheduler_retry_on_release.py  test_orchestrate_shutdown.py  test_orchestrate_task_paths.py  test_prime_inference.py  test_randomize_mcq.py  test_retry.py  test_xml_parser.py
tests/test_cli/: test_config_loader.py  test_endpoint_utils.py  test_job_builder.py  test_job_executor.py  test_main.py  test_manifest_conversion_smoke.py  test_manifest_planner.py  test_manifest_snapshot.py  test_process_aggregate.py  test_process_discovery.py  test_process_hf_sync.py  test_process_metadata.py  test_process_pipeline.py  test_process_rollout.py  test_process_rows.py  test_process_winrate.py  test_process_workspace.py  test_process_writer.py  test_required_env_args.py  test_schemas.py  test_shared.py
(+23 files in other folders)
