[project]
name = "REDACTED-verifiers"
version = "0.1.0"
description = "A collection of REDACTED utilites for the verifiers package"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "prime>=0.3.35",
    "verifiers<0.1.8",
    "pyyaml>=6.0.1",
    "docstring-parser>=0.17.0",
    "pylatexenc>=2.10",
    "datasets[parquet]>=4.2.0",
    "pydantic>=2.12.3",
    "omegaconf>=2.3.0",
    "polars>=1.35.1",
    "tabulate>=0.9.0",
    "rich>=13.7.0",
]

[project.scripts]
REDACTED-eval = "REDACTED_verifiers.cli.main:main"
REDACTED-orchestrate = "REDACTED_verifiers.orchestrate.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.2",
]
orchestrator = [
    "docker>=7.0.0",
    "httpx>=0.27.0",
    "nvidia-ml-py>=12.560.30",
    "python-dotenv>=1.0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
extend-exclude = ["docs"]
src = ["REDACTED_verifiers"]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "REDACTED_verifiers"
module-root = ""
