[project]
name = "careqa"
description = "Evaluation environment for the HPAI-BSC/CareQA MCQ dataset"
tags = ["healthcare", "medical-qa", "mcq", "clinical", "single-turn", "open-ended"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.4",
    "datasets>=2.13.0",
    "REDACTED_verifiers>=0.1.0",
]

[tool.prime.environment]
loader = "careqa:load_environment"
display_name = "CareQA"
visibility = "PUBLIC"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["careqa.py"]

[tool.uv.sources]
REDACTED_verifiers = { git = "https://github.com/REDACTED/med-lm-envs" }