[project]
name = "med_dialog"
description = "MedDialog is a benchmark of real-world doctor-patient conversations focused on health-related concerns and advice and tests a model's ability to summarize the dialogue."
tags = ["medical", "dialogue", "summarization", "single-turn", "llm-judge"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.4",
    "datasets>=4.1.1",
    "openai>=2.1.0",
    "REDACTED_verifiers>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
REDACTED_verifiers = { git = "https://github.com/REDACTED/med-lm-envs" }