[project]
name = "medbullets"
description = "Single-turn medical MCQ"
tags = ["medical", "clinical", "single-turn", "multiple-choice", "usmle", "train", "evaluation"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.3.post0",
    "REDACTED_verifiers>=0.1.0",
]

[tool.prime.environment]
loader = "medbullets:load_environment"
display_name = "Medbullets"
visibility = "PUBLIC"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["medbullets.py"]

[tool.uv.sources]
REDACTED_verifiers = { git = "https://github.com/REDACTED/med-lm-envs" }