[project]
name = "medcalc-bench"
version = "0.1.0"
description = "MedCalc-Bench clinical calculator evaluation"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "verifiers>=0.1.4",
    "datasets>=4.0.0",
    "numpy>=1.26.0",
    "simpleeval>=0.9.10",
    "medarc_verifiers>=0.1.0",
    "RestrictedPython>=8.0",
    "scipy>=1.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["medcalc_bench.py"]

[tool.uv.sources]
medarc_verifiers = { git = "https://github.com/MedARC-AI/med-lm-envs" }

[tool.prime.environment]
# lets Prime/vf-eval know where the loader lives in a flat repo
loader = "medcalc_bench:load_environment"
display_name = "MedCalc-Bench"
visibility = "PUBLIC"
