[project]
name = "medec"
description = "Medical Error Detection and Correction in clinical notes from Ben Abacha et al., 2024"
tags = ["medical", "clinical", "reasoning", "single-turn", "llm-judge", "error-correction", "evaluation"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.4",
    "datasets",
    "openai>=1.3.0",
    "numpy",
]

[dependency-groups]
metrics = [
    "rouge",
    "bert-score",
    "bleurt @ git+https://github.com/google-research/bleurt.git"
]

[tool.prime.environment]
loader = "medec:load_environment"
display_name = "MEDEC"
visibility = "PUBLIC"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["medec.py"]

[tool.hatch.metadata]
allow-direct-references = true