[project]
name = "mtsamples_procedures"
description = "MTSamples Procedures is a benchmark of medical transcription samples that tests a model's ability to generate coherent and clinically accurate procedural summaries or treatment plans from surgical procedure documentation."
tags = ["medical", "procedures", "plan_generation", "single-turn", "llm-judge"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.4",
    "datasets>=4.1.1",
    "openai>=2.1.0",
    "REDACTED_verifiers>=0.1.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
REDACTED_verifiers = { git = "https://github.com/REDACTED/med-lm-envs" }