[project]
name = "mtsamples_replicate"
description = "MTSamples Replicate is a benchmark of transcribed medical reports that evaluates a model’s ability to generate clinically appropriate treatment plans from unstructured patient documentation, following HELM’s MTSamples Replicate scenario."
tags = [
    "medical",
    "transcription",
    "plan_generation",
    "single-turn",
    "llm-judge",
    "helm-replicate"
]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.4",
    "datasets>=4.1.1",
    "openai>=2.1.0",
    "medarc_verifiers>=0.1.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
medarc_verifiers = { git = "https://github.com/MedARC-AI/med-lm-envs" }
