[project]
name = "pubmedqa"
description = "Single-turn medical MCQ"
tags = ["medical", "clinical", "single-turn", "multiple-choice", "evaluation"]
version = "0.1.0"
requires-python = ">=3.11"
authors = [
    { name = "REDACTED", email = "REDACTED" },
]
dependencies = [
    "verifiers>=0.1.3.post0",
    "datasets>= 4.0.0",
    "REDACTED_verifiers>=0.1.0",
]

[project.optional-dependencies]
test = [
    "openai>=1.104.2",
    "prime",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["pubmedqa.py"]

[tool.uv.sources]
REDACTED_verifiers = { git = "https://github.com/REDACTED/med-lm-envs" }