[project]
name = "supergpqa-medicine"
description = "Single-turn medicine MCQ"
tags = ["medicine", "single-turn", "multiple-choice", "supergpqa", "evaluation", "test"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.3.post0",
    "medarc_verifiers>=0.1.0",
]

[tool.prime.environment]
loader = "supergpqa_medicine:load_environment"
display_name = "SuperGPQA-Medicine"
visibility = "PUBLIC"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["supergpqa_medicine.py"]

[tool.uv.sources]
medarc_verifiers = { git = "https://github.com/MedARC-AI/med-lm-envs" }
