[project]
name = "supergpqa-medicine"
description = "Single-turn medicine MCQ"
tags = ["medicine", "single-turn", "multiple-choice", "supergpqa", "evaluation", "test"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.3.post0",
    "REDACTED_verifiers>=0.1.0",
]

[tool.prime.environment]
loader = "supergpqa_medicine:load_environment"
display_name = "SuperGPQA-Medicine"
visibility = "PUBLIC"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["supergpqa_medicine.py"]

[tool.uv.sources]
REDACTED_verifiers = { git = "https://github.com/REDACTED/med-lm-envs" }
